# server-after-versioning/swagger_server/controllers/boundary_controller.py
@@ -89,7 +89,9 @@ def update_boundary(problem_id, version, boundary):
             return jsonify(Error(409, message)), status.HTTP_409_CONFLICT
 
         #check if boundary is in valid range
-        sanitize_boundary(boundary, problem)
+        test_bool = sanitize_boundary(boundary, problem)
+        if (test_bool is False):
+            return jsonify(Error(405, "Validation exception: Invalid boundary info")), status.HTTP_405_METHOD_NOT_ALLOWED
 
         #store new Goal coordinates into Goal of Problem
         problem['boundary'] = boundary
@@ -120,37 +122,25 @@ def sanitize_boundary(bound, prob):
         bound_info = bound["boundary_info"]
         if ("latitude" in bound_info and "longitude" in bound_info):
             bound_lat = bound_info["latitude"]
-            bound_long = bound_info["longitude"] 
-        else:
-            return Error(405, "Validation exception: Invalid boundary data"), status.HTTP_405_METHOD_NOT_ALLOWED
-    else: 
-        return Error(405, "Validation exception: Invalid boundary data"), status.HTTP_405_METHOD_NOT_ALLOWED
-    return
+            bound_long = bound_info["longitude"]
+     
+            goal_lat = prob["goal"]["coordinates"]["latitude"]
+            goal_long = prob["goal"]["coordinates"]["longitude"]
 
-'''
-def sanitize_boundary(bound, prob):
-    if ("boundary_info" in bound):
-        boundary_info = bound["boundary_info"]
-        boundary_lat = boundary_info["latitude"]
-        boundary_long = boundary_info["longitude"]
-
-        goal_info = prob["goal"]
-        goal_coordinates = goal_info["coordinates"]
-        goal_lat = goal_coordinates["latitude"]
-        goal_long = goal_coordinates["longitude"]
- 
-        robot_info = prob["robots"]
-        for coor in robot_info:
-            if ("coordinates" in coor):
-                robot_coordinates = coor["coordinate"]
-                robot_lat = robot_coordinates["latitude"]
-                robot_long = robot_coordinates["longitude"]
-                if (boundary_lat not in range(robot_lat, goal_lat)):
-                    return Error(405, "Validation exception: Invalid boundary data"), status.HTTP_405_METHOD_NOT_ALLOWED
-                if (boundary_long not in range (robot_long, goal_long)):  
-                    return Error(405, "Validation exception: Invalid boundary data"), status.HTTP_405_METHOD_NOT_ALLOWED 
-    else:
-        return Error(405, "Validation exception: Did not provide proper boundary"), status.HTTP_405_METHOD_NOT_ALLOWED
-    return
-'''
+            rob_info = prob["robots"]
+            for coor in robot_info:
+                if ("coordinates" in coor):
+                    robot_lat = coor["coordinate"]["latitude"]
+                    robot_long = coor["coordinate"]["longitude"]
+                    ''' 
+                    if (bound_lat not in range(robot_lat, goal_lat)):
+                        return False
+                    if (bound_long not in range(robot_long, goal_long)):
+                        return False
+                    '''
+       # else:
+        #    return False
+  #  else: 
+   #     return False
+    return True
 
